# eda-to-excel

./: .gitignore  README.md  pyproject.toml
config/: config.json  eda - Copia.xlsx  eda.xlsx  eda_matriz.xlsx
data/: Ses_cias.csv  Ses_ramos.csv  Ses_seguros.csv
src/: config.py  eda.ipynb  eda_describe.py  eda_tools.py
